# f1tenth-final-race

ego_controller/: package.xml  setup.cfg  setup.py
ego_controller/csv/: centerline_dense.csv  centerline_deviate.csv
ego_controller/ego_controller/: controller_node.py  lane_switching_node.py  waypoint_visualizer.py
final_race/: CMakeLists.txt  package.xml  setup.py
final_race/config/: race_params.yaml
final_race/launch/: controller_launch.py  race_launch.py
final_race/scripts/: controller_node.py  obstacle_node.py  reactive_node.py  waypoint_visualizer_2.py
final_race/waypoints/: centerline_deviate_inner.csv  centerline_deviate_outer.csv  centerline_with_mode.csv  centerline_with_mode_copy.csv
mppi/scripts/: config.yaml  infer_env.py  mppi_node.py  mppi_tracking.py
mppi/scripts/utils/: Track.py
mppi/scripts/waypoints/: map_info.txt
mppi/scripts/waypoints/race3/: race3.pgm  race3.yaml  race3_mod_wp.csv
opponent_estimator/: CMakeLists.txt  package.xml
opponent_estimator/csv/: centerline_deviate.csv  midpoint_upsampled_trackwidth.csv
opponent_estimator/include/opponent_estimator/: opponent_estimator.hpp
opponent_estimator/src/: obs_detection_utils.cpp  opponent_estimator.cpp  opponent_estimator_node.cpp  visualization.cpp
race_stack/: package.xml  setup.cfg  setup.py
race_stack/config/: ego_controller.yaml  opponent_estimator.yaml
race_stack/launch/: race_launch.py
